fixed spacing issue on home page

--- a/src/components/styles/_home.scss
+++ b/src/components/styles/_home.scss
@@ -4,21 +4,26 @@
   padding-top: 2rem;
   @include xs {
     grid-template-rows: 1fr 1fr;
+    gap: none;
   }
   @include sm {
     grid-template-rows: 1fr 1fr;
+    gap: none;
   }
   @include md {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: none;
+    gap: 2rem;
   }
   @include lg {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: none;
+    gap: 2rem;
   }
   @include xl {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: none;
+    gap: 2rem;
   }
 }
 .slide {
